--- a/javascript/01 hardcore-functional-programming/7 weatherApp/index.html
+++ b/javascript/01 hardcore-functional-programming/7 weatherApp/index.html
@@ -8,5 +8,5 @@
     <button id="go">Go</button>
     <ul id="results"></ul>
   </body>
-  <script type="module" src="./index.js"></script>
+  <script src="./index.bundle.js"></script>
 </html>
